--- a/src/main/webapp/app/hakukohde/valintaryhmanSiirtoModal.html
+++ b/src/main/webapp/app/hakukohde/valintaryhmanSiirtoModal.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h3>Siirrä hakukohde toiseen valintaryhmään</h3>
+    <h3>{{ t('valintaryhmansiirtomodal.header') || 'Siirrä hakukohde toiseen valintaryhmään' }}</h3>
 </div>
 <div class="modal-body">
     <div ng-include="'../common/partials/valintaryhmaSelector.html'" />
@@ -8,7 +8,7 @@
 <div class="modal-footer">
 
     <a class="btn btn-primary btn-sm" ng-click="siirra();"
-       role="button">Siirra</a>
+       role="button">{{ t('valintaryhmansiirtomodal.siirra') || 'Siirrä' }}</a>
     <a class="btn btn-default btn-sm" ng-click="sulje();"
-       role="button">Sulje</a>
+       role="button">{{ t('valintaryhmansiirtomodal.sulje') || 'Sulje' }}</a>
 </div>
