VT-381 Koekutsutoiminnon laajentaminen korkeakoulujen tarpeisiin

--- a/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
+++ b/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
@@ -65,8 +65,8 @@
                     </tbody>
                 </table>
                 <span auth="crud" class="btn btn-sm btn-default" ng-click="addJono()"><i
-                        class="fa fa-plus"></i> Jono</span>
-            </div>
+                        class="fa fa-plus"></i> {{ t('valinnanvaihelomake.jono') || 'Jono' }}</span>
+             </div>
         </div>
         <div class="clear"></div>
 
