--- a/src/main/webapp/app/valintakoe/valintakoelomake.html
+++ b/src/main/webapp/app/valintakoe/valintakoelomake.html
@@ -47,6 +47,15 @@
             <div class="form-row-content">
                 <input type="checkbox" name="kutsutaankoKaikki" ng-model="model.valintakoe.kutsutaankoKaikki"/>
             </div>
+
+            <div class="clear"></div>
+            <label class="form-row-label" for="maara">{{ t('valintakoelomake.maara') || 'Kutsuttavien määrä' }}</label>
+
+            <div class="form-row-content">
+                <input id="maara" name="maara" ng-model="model.valintakoe.kutsuttavienMaara" type="number" min="0"
+                       required/>
+            </div>
+
         </div>
 
         <div class="form-row">
