VT-381 Koekutsutoiminnon laajentaminen korkeakoulujen tarpeisiin

--- a/src/main/webapp/app/valintakoe/valintakoelomake.html
+++ b/src/main/webapp/app/valintakoe/valintakoelomake.html
@@ -53,7 +53,7 @@
 
             <div class="form-row-content">
                 <input id="maara" name="maara" ng-model="model.valintakoe.kutsuttavienMaara" type="number" min="0"
-                       required/>
+                       ng-disabled="model.valintakoe.kutsutaankoKaikki"/>
             </div>
 
         </div>
