--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -1,3 +1,16 @@
+<script type="text/ng-template" id="poistavalinnanvaihe.html">
+    <div class="modal-header">
+        <h3 class="modal-title">{{ t('valintaryhmalomake.poistavalinnanvaihe.header') || 'Oletko varma?' }}</h3>
+    </div>
+    <div class="modal-body">
+        {{ t('valintaryhmalomake.poistavalinnanvaihe.body') || 'Oletko varma, että haluat poistaa valinnan vaiheen?' }}
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-click="ok()">{{ t('valintaryhmalomake.poistavalinnanvaihe.kylla') || 'Kyllä' }}</button>
+        <button class="btn btn-warning" ng-click="cancel()">{{ t('valintaryhmalomake.poistavalinnanvaihe.ei') || 'Ei' }}</button>
+    </div>
+</script>
+
 <h1>{{ t('valintaryhmalomake.header') || 'Valintaryhmän muokkaus' }}</h1>
 
 
